src/main/java/com/example/property_management/error/exception/AssignmentAlreadyExistsException.java
package com.example.property_management.error.exception;

public class AssignmentAlreadyExistsException extends RuntimeException {
    public AssignmentAlreadyExistsException(String message) {
        super(message);
    }
}
